# financial-tracker

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/financial_tracker/: __main__.py  categories.py  correction.py  llm.py  pdf.py  pdf_services.py  preprocess.py  visualize.py
